--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@img-comparison-slider/vue": "^8.0.0",
+    "@imgly/background-removal": "^1.5.3",
+    "@imgly/background-removal-data": "^1.4.5",
     "@mdi/font": "^7.4.47",
     "dom-to-image-more": "^3.3.0",
     "interactjs": "^1.10.27",
@@ -19,6 +22,7 @@
   },
   "devDependencies": {
     "vite-plugin-vuetify": "^2.0.3",
-    "vuetify": "^3.6.12"
+    "vuetify": "^3.6.13",
+    "@nuxtjs/i18n": "^8.3.0"
   }
 }
