--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "html2canvas": "^1.4.1",
     "interactjs": "^1.10.27",
     "nuxt": "^3.12.3",
-    "vue": "latest",
+    "vue": "^3.4.35",
     "vue-qr": "^4.0.9"
   },
   "devDependencies": {
