--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "@nuxtjs/i18n": "^8.3.0",
+    "@vueuse/core": "^10.11.1",
+    "shiki": "^1.12.1",
     "vite-plugin-vuetify": "^2.0.3",
     "vuetify": "^3.6.13"
   }
