--- a/package.json
+++ b/package.json
@@ -14,16 +14,18 @@
     "@imgly/background-removal": "^1.5.3",
     "@imgly/background-removal-data": "^1.4.5",
     "@mdi/font": "^7.4.47",
-    "axios": "^1.7.3", 
+    "axios": "^1.7.3",
     "html2canvas": "^1.4.1",
     "interactjs": "^1.10.27",
+    "sortablejs": "^1.15.2",
+    "swapy": "^0.1.1",
     "vue": "^3.4.35",
     "vue-qr": "^4.0.9"
   },
   "devDependencies": {
-    "shiki": "^1.12.1",
-    "nuxt": "^3.12.3",
     "@nuxtjs/i18n": "^8.3.0",
+    "nuxt": "^3.12.3",
+    "shiki": "^1.12.1",
     "vite-plugin-vuetify": "^2.0.3",
     "vuetify": "^3.6.13"
   }
