--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "analyze": "nuxt analyze"
   },
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.10",
+    "@ffmpeg/util": "^0.12.1",
     "@img-comparison-slider/vue": "^8.0.0",
     "@imgly/background-removal": "^1.5.3",
     "@imgly/background-removal-data": "^1.4.5",
